<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_gurumdds_shared_cpp</name>
  <version>1.0.11</version>
  <description>Code shared on static and dynamic type support of rmw_gurumdds_cpp.</description>
  <maintainer email="youngjin@gurum.cc">Youngjin Yun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <build_depend>gurumdds-2.7</build_depend>
  <build_depend>gurumdds_cmake_module</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>

  <build_export_depend>gurumdds-2.7</build_export_depend>
  <build_export_depend>gurumdds_cmake_module</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
